--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -5,11 +5,11 @@ on: workflow_dispatch
 
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
-  RESOURCE-GROUP: rg-eshoponweb-westeurope
-  LOCATION: westeurope
+  RESOURCE-GROUP: rg-eshoponweb-eastus2
+  LOCATION: eastus2
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: f0ee44bd-2c43-4ffd-b76d-c1e4fbc58dd0
-  WEBAPP-NAME: devops-webapp-westeurope-57015192
+  WEBAPP-NAME: devops-webapp-eastus2-57015192
 
 jobs:
   #Build, test and publish .net web project in repository
