--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -82,7 +82,7 @@ jobs:
           subscriptionId: ${{ env.SUBSCRIPTION-ID }}
           resourceGroupName: ${{ env.RESOURCE-GROUP }}
           template: bicep-template/webapp.bicep
-          parameters: "webAppName=${{ env.WEBAPP-NAME }} location=${{ env.westeurope }}"
+          parameters: "webAppName=${{ env.WEBAPP-NAME }} location=${{ env.eastus2 }}"
           failOnStdErr: false
 
       # Publish website to Azure App Service (WebApp)
